<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_mypage"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_mypage" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_recorder"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_recorder" />
        <item
            android:id="@+id/nav_dictionary"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_dictionary" />
        <item
            android:id="@+id/nav_hospital"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_hospital" />
    </group>
</menu>